refactor: modify layout to remove blog style formatting

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -26,7 +26,7 @@
         {{- with $params.subtitle -}}
             <h2 class="single-subtitle">{{ . }}</h2>
         {{- end -}}
-
+<!-- 
         {{- /* Meta */ -}}
         <div class="post-meta">
             <div class="post-meta-line">
@@ -61,7 +61,7 @@
                     </span>&nbsp;
                 {{- end -}}
             </div>
-        </div>
+        </div> -->
 
         {{- /* Featured image */ -}}
         {{- $image := $params.featuredimage -}}
