--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -24,7 +24,7 @@
 
     {{- /* Meta */ -}}
     <div class="post-meta">
-        {{- $author := $params.author | default .Site.Author.name | default (T "author") -}}
+        <!-- {{- $author := $params.author | default .Site.Author.name | default (T "author") -}}
         {{- $authorLink := $params.authorlink | default .Site.Author.link | default .Site.Home.RelPermalink -}}
         <span class="post-author">
             {{- $options := dict "Class" "author" "Destination" $authorLink "Title" "Author" "Rel" "author" "Icon" (dict "Class" "fas fa-user-circle fa-fw") "Content" $author -}}
@@ -35,7 +35,7 @@
             &nbsp;<span class="post-publish">
                 {{- printf `<time datetime="%v">%v</time>` . . | dict "Date" | T "publishedOnDate" | safeHTML -}}
             </span>
-        {{- end -}}
+        {{- end -}} -->
 
         {{- $categories := slice -}}
         {{- range .Params.categories -}}
